# CPT109_Group_New

./: CMakeLists.txt  README.md  main.c
include/: planet_manager.h  researcher_manager.h  search_manager.h  searchplanet_manager.h  statics_manager.h  user_manager.h
src/: planet_manager.c  researcher_manager.c  search_manager.c  searchplanet_manager.c  statics_manager.c  user_manager.c
好玩的测试代码来玩/: FileName.c  Project1.sln  Project1.vcxproj
好玩的测试代码来玩/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
好玩的测试代码来玩/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
重要代码测试/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
重要代码测试/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
